[update] window.gapi loading problem fixed, Superagent added to dependencies, minor style fixes

--- a/src/ui/Atoms/Button/styles.scss
+++ b/src/ui/Atoms/Button/styles.scss
@@ -1,5 +1,5 @@
 .button {
-  padding: 10px 12px;
+  padding: 8px 12px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
