--- a/src/ui/Organisms/Header/styles.scss
+++ b/src/ui/Organisms/Header/styles.scss
@@ -31,7 +31,7 @@
   &__auth {
     position: absolute;
     top: 50%;
-    right: 10px;
+    right: 20px;
     transform: translateY(-50%);
     display: flex;
     align-items: center;
